@@ -1,7 +1,6 @@
-@comment $NetBSD: PLIST,v 1.2 2002/01/02 11:54:27 hubertf Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/05/02 17:25:15 xtraeme Exp $
 bin/cue
+share/doc/cue/cue.hlp
 share/examples/cue/sample.cuerc
 @dirrm share/examples/cue
-share/doc/cue/cue.hlp
-share/doc/cue/cue.html
 @dirrm share/doc/cue
